--- a/main.css
+++ b/main.css
@@ -95,6 +95,12 @@ h1
     padding-top: 50px;
 
 }
+section
+{
+    
+    border-radius: 0;
+}
+
 section:nth-child(1)>button:hover
 {
     background-color: hsl(31, 77%, 52%);
